@@ -19,6 +19,7 @@ Android client
 - Empty channels with max users set to zero are listed first (sticky channels)
 - Buttons for changing between tabs Channels, Chat, Media Streams and Files
 - Preferences are grouped into General, Sound Events, Text to Speech, Connection and Sound System
+- Users are now displayed before channels
 
 Version 5.5.1, 2020/05/03
 Accessible Windows client
